inputs/source_meta/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Insurance_Notes__c</fullName>
        <label>Insurance Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Consumer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Consumer</description>
        <label>Is Consumer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Location__c</fullName>
        <formula>RecordType.DeveloperName = &apos;Location&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landmark__c</fullName>
        <label>Landmark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageLocalekey__c</fullName>
        <label>Language Locale key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Locale_Key</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name_on_Credit_Card__c</fullName>
        <label>Last Name on Credit Card</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocaleSidKey__c</fullName>
        <label>Locale Sid Key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Locale_Key</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Status__c</fullName>
        <inlineHelpText>This field tells you about the Company&apos;s Location Status</inlineHelpText>
        <label>Location Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Delinquent</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Seasonal Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locations_Parent_HNS_Company_ID_del__c</fullName>
        <description>HNS Company ID of Location&apos;s Parent Company. This is needed to show this information on the service cloud console highlight panel when someone is viewing location account.</description>
        <formula>Parent.CBC_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>HNS Company ID of Location&apos;s Parent Company. This is needed to show this information on the service cloud console highlight panel when someone is viewing location account.</inlineHelpText>
        <label>Location&apos;s Parent HNS Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Status__c</fullName>
        <label>Maintenance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Charge Number</fullName>
                </value>
                <value>
                    <fullName>Contact PM</fullName>
                </value>
                <value>
                    <fullName>Former Customer</fullName>
                </value>
                <value>
                    <fullName>HNS Approved</fullName>
                </value>
                <value>
                    <fullName>Maint. Contract-Negotiating</fullName>
                </value>
                <value>
                    <fullName>Maint. Contract - Paid</fullName>
                </value>
                <value>
                    <fullName>No Contract</fullName>
                </value>
                <value>
                    <fullName>Not Defined</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>PO Required</fullName>
                </value>
                <value>
                    <fullName>Under Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Tactics__c</fullName>
        <description>Primary method of marketing HughesNet products and services</description>
        <label>Marketing Tactics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drafting</fullName>
                </value>
                <value>
                    <fullName>Internet marketing</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Affiliate marketing</fullName>
                </value>
                <value>
                    <fullName>Walk in traffic/storefront</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Referrals</fullName>
                </value>
                <value>
                    <fullName>Newspaper - Standard Print Ads</fullName>
                </value>
                <value>
                    <fullName>Newspaper - Classifieds</fullName>
                </value>
                <value>
                    <fullName>Print Media - other than newspaper</fullName>
                </value>
                <value>
                    <fullName>Shared mail</fullName>
                </value>
                <value>
                    <fullName>Install site - yard signs, door hangers</fullName>
                </value>
                <value>
                    <fullName>Billboards</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>TV Ads</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Yellow Pages/Book and Web Yellow book</fullName>
                </value>
                <value>
                    <fullName>Chamber Membership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mother_Name__c</fullName>
        <description>Used for Credit Check</description>
        <label>Mother&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipal_Registry__c</fullName>
        <label>Municipal Registry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEP_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the brand follows NEP process or IOES process.</description>
        <label>NEP Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NMS_BBS_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>NMS BBS ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <label>Neighborhood</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this site constitute new construction?</description>
        <inlineHelpText>This site constitute new construction.</inlineHelpText>
        <label>New Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Of_Certified_Installers__c</fullName>
        <label>No Of Certified Installers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Description__c</fullName>
        <label>Offer Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <label>Offer/Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Broadband_Services__c</fullName>
        <label>Other Broadband Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Business_Size__c</fullName>
        <label>Other Business Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Products_Services__c</fullName>
        <label>Other Products/Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Override_Install_Address_Reason__c</fullName>
        <label>Override Install Address Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Construction</fullName>
                </value>
                <value>
                    <fullName>Street Match Not Found</fullName>
                </value>
                <value>
                    <fullName>City/Zip Match Not Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_Install_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Override_Install_Address__c= False, Validate full Install Address using StrikeIron.

If Override_Install_Address__c = True, Validate Partial Address i.e, City, State, Zip combination valid.</description>
        <label>Override Install Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPC_Campaigns__c</fullName>
        <label>PPC Campaigns</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Customer_ID__c</fullName>
        <formula>Parent.HNS_Company_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerId__c</fullName>
        <description>This is same as Dealer ID/ Sales Agent ID/DSS Source ID set up in on-premise systems.</description>
        <inlineHelpText>This is same as Dealer ID/ Sales Agend ID/ DSS Source ID set up in on-premise systems.</inlineHelpText>
        <label>Partner ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Partner_Marketing_Methods__c</fullName>
        <label>Partner Marketing Methods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drafting</fullName>
                </value>
                <value>
                    <fullName>Internet marketing</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Affiliate marketing</fullName>
                </value>
                <value>
                    <fullName>Walk in traffic/storefront</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Referrals</fullName>
                </value>
                <value>
                    <fullName>Newspaper - Standard Print Ads</fullName>
                </value>
                <value>
                    <fullName>Newspaper - Classifieds</fullName>
                </value>
                <value>
                    <fullName>Print Media - other than newspaper</fullName>
                </value>
                <value>
                    <fullName>Shared mail</fullName>
                </value>
                <value>
                    <fullName>Install site - yard signs, door hangers</fullName>
                </value>
                <value>
                    <fullName>Billboards</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>TV Ads</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Yellow Pages/Book and Web Yellow book</fullName>
                </value>
                <value>
                    <fullName>Chamber Membership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <description>Used primarily to identify type of retailers/partner accounts.</description>
        <inlineHelpText>Used primarily to identify type of retailers/partner accounts.</inlineHelpText>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer - DDO</fullName>
                </value>
                <value>
                    <fullName>Dealer - DDO &amp; Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Hughes Sales Agent (HSA)</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>SP Distributor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Code__c</fullName>
        <label>Payment Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>What is the Payment Method associated with this account?  Required prior to placing orders for this account.</description>
        <inlineHelpText>What is the Payment Method associated with this account?  Required prior to placing orders for this account.</inlineHelpText>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CreditCard</fullName>
                </value>
                <value>
                    <fullName>Automatic Authorized Debit/D.A.C.C</fullName>
                </value>
                <value>
                    <fullName>Boleto</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                    <default>true</default>
                    <label>Invoice</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_Contract_Number__c</fullName>
        <label>Physical Contract Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Physical_Contract_Status__c</fullName>
        <label>Physical Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>Not Available</label>
                </value>
                <value>
                    <fullName>Unsigned</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Connectivity__c</fullName>
        <description>What is the primary transport option ordered for this site?</description>
        <label>Primary Connectivity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3G/4G</fullName>
                </value>
                <value>
                    <fullName>BYOB</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>Dedicated DSL</fullName>
                </value>
                <value>
                    <fullName>Dial-Up</fullName>
                </value>
                <value>
                    <fullName>DSL</fullName>
                </value>
                <value>
                    <fullName>FIOS</fullName>
                </value>
                <value>
                    <fullName>Shared DSL</fullName>
                </value>
                <value>
                    <fullName>U-verse</fullName>
                </value>
                <value>
                    <fullName>VSAT</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact for this physical location.</description>
        <inlineHelpText>Primary contact for this physical location.</inlineHelpText>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Location, Consumer Customer, SOHO</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Location, Partner, Consumer Customer, SOHO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Contact)</relationshipLabel>
        <relationshipName>Primary_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_tab__c</fullName>
        <label>Primary tab</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Purchase_From__c</fullName>
        <label>Product Purchase From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarterly_Marketing_Budget__c</fullName>
        <label>Quarterly Marketing Budget</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Account record type name.</description>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account record type name.</inlineHelpText>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recordtype__c</fullName>
        <formula>if(RecordType.DeveloperName=&apos;SOHO&apos;, $Label.SA_Account_record_SOHO ,if(RecordType.DeveloperName=&apos;Consumer_Customer&apos;, $Label.SA_Account_record_Consumer ,if(RecordType.DeveloperName=&apos;Consumer&apos;, $Label.SA_Account_record_Partner , $Label.SA_Account_record_Location)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Access_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup reference to Business Hours Object</description>
        <label>Roof Access Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Router_Block_Ipsec_Traffic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does your broadband router block IPsec traffic from the LAN?</description>
        <label>Block IPsec Traffic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAN_Prefix__c</fullName>
        <description>This will be used for SAN generation when an order comes from a given Partner</description>
        <label>SAN Prefix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAN__c</fullName>
        <description>Applicable for Location Accounts Only.</description>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sold_To__c</fullName>
        <description>Defines where RMA will be posted in SAP Manufacturing and distribution - 
This is WBS number for the customer in SAP.</description>
        <inlineHelpText>Defines where RMA will be posted in SAP Manufacturing and distribution - 
This is WBS number for the customer in SAP.</inlineHelpText>
        <label>SAP Sold To#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Language__c</fullName>
        <label>SP Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <default>true</default>
                    <label>en_US</label>
                </value>
                <value>
                    <fullName>es_PA</fullName>
                </value>
                <value>
                    <fullName>es_PE</fullName>
                </value>
				<value>
                    <fullName>es_AR</fullName>
                </value>
                <value>
                    <fullName>es_EC</fullName>
                </value>
                <value>
                    <fullName>es_CL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SP_Partner_Id__c</fullName>
        <label>SP Partner Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Applicable for only service provider account.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BILLING SALES AGENTS</fullName>
                </value>
                <value>
                    <fullName>DEALER - DIRECT ORDER</fullName>
                </value>
                <value>
                    <fullName>DEALER - DIRECT ORDER - BI</fullName>
                </value>
                <value>
                    <fullName>DEALER - DIRECT ORDER - DTV</fullName>
                </value>
                <value>
                    <fullName>DEALER - DIRECT ORDER - SOC</fullName>
                </value>
                <value>
                    <fullName>DIRECT</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUTOR SALES AGENTS</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUTOR SALES AGENTS - DTV</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE DIST SALES AGENTS</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE INSTALL</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE SALES AGENTS</fullName>
                </value>
                <value>
                    <fullName>HN7000 UPGRADE</fullName>
                </value>
                <value>
                    <fullName>HN9000 UPGRADE</fullName>
                </value>
                <value>
                    <fullName>HN9000 UPGRADE - DEALER</fullName>
                </value>
                <value>
                    <fullName>HT1000 UPGRADE</fullName>
                </value>
                <value>
                    <fullName>HT1000 UPGRADE - DEALER</fullName>
                </value>
                <value>
                    <fullName>HT1000 UPGRADE - SA</fullName>
                </value>
                <value>
                    <fullName>HUGHES SALES AGENTS</fullName>
                </value>
                <value>
                    <fullName>REFERRAL AGENT</fullName>
                </value>
                <value>
                    <fullName>RETAIL</fullName>
                </value>
                <value>
                    <fullName>RETAIL - DIRECT ORDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>Defines where RMA will be posted in SAP Manufacturing and distribution</description>
        <inlineHelpText>Defines where RMA will be posted in SAP Manufacturing and distribution</inlineHelpText>
        <label>Sales Org</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Projections_90_Days__c</fullName>
        <label>Sales Projections 90 Days</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Status__c</fullName>
        <inlineHelpText>This field tells you about the Satisfaction Status</inlineHelpText>
        <label>Satisfaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOT</fullName>
                </value>
                <value>
                    <fullName>Marginal</fullName>
                </value>
                <value>
                    <fullName>Migrating Away</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SelfCare_PermissionSet_Name__c</fullName>
        <description>Self-care Permission set to show/hide Sidebar links depending upon the Partner country</description>
        <label>Self-care Permission Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelfCare_Profile_Name__c</fullName>
        <label>SelfCare Profile Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelfCare_Username_Domain__c</fullName>
        <label>SelfCare Username Domain</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Product_Counter__c</fullName>
        <label>Service Product Counter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_full__c</fullName>
        <description>Complete shipping address for this account.</description>
        <formula>if(LEN(ShippingStreet)&gt;0, ShippingStreet&amp; &quot; &quot; , &quot;&quot; )&amp; BR() &amp;
if(LEN(ShippingCity)&gt;0, ShippingCity&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(ShippingState)&gt;0, ShippingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(ShippingPostalCode)&gt;0 &amp;&amp; (!ISNUMBER(ShippingPostalCode) || Value(ShippingPostalCode) != 0), ShippingPostalCode &amp; &quot; &quot;,&quot;&quot;) &amp; BR() &amp;
If(LEN(ShippingCountry) &gt;0, ShippingCountry ,&quot;&quot;)</formula>
        <inlineHelpText>Complete shipping address for this account.</inlineHelpText>
        <label>Install Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_District__c</fullName>
        <label>Shipping District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_ID__c</fullName>
        <label>Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Customer_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Customer ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Source Customer ID)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Registry__c</fullName>
        <label>State Registry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>What is the current status of this account?</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Delete Request</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Neglected</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strata__c</fullName>
        <label>Strata</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subnet_Mask__c</fullName>
        <description>Subnet Mask if your Broadband Router does NOT serve DHCP</description>
        <label>Subnet Mask</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Effective_Date__c</fullName>
        <description>Date on when Termination will be effective</description>
        <label>Termination Effective Date</label>
        <type>Date</type>
    </fields>
</CustomObject>